--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ minxiongkuo@sjtu.edu.cn<br />
 </div></div>
 <h2>News</h2>
 <ul>
-<li><p>10/2024, Our paper accepted to ACM Multimedia 2024 is selected as Best Paper Nominations</p>
+<li><p>10/2024, Our paper accepted to ACM Multimedia 2024 is selected as Best Paper Nomination</p>
 </li>
 <li><p>09/2024, We receive the 1st Place Award of the ECCV AIM 2024 Challenge on UHD Blind Photo Quality Assessment</p>
 </li>
@@ -112,7 +112,7 @@ minxiongkuo@sjtu.edu.cn<br />
 </li>
 <li><p>06/2021, We receive the Best Paper Runner-up Award of IEEE Transactions on Multimedia</p>
 </li>
-<li><p>02/2021, I received the Excellent Ph.D. Thesis Award of Chinese Institute of Electronics (CIE) (中国电子学会优博)</p>
+<li><p>02/2021, I receive the Excellent Ph.D. Thesis Award of Chinese Institute of Electronics (CIE) (中国电子学会优博)</p>
 </li>
 <li><p>07/2019, We receive the Best Paper Award of IEEE International Workshop on Mobile Multimedia Computing (in conjunction with IEEE ICME)</p>
 </li>
@@ -171,7 +171,7 @@ Guangtao Zhai, and Xiongkuo Min<br />
 <li><p><b>Blind Quality Assessment Based on Pseudo Reference Image</b><br />
 Xiongkuo Min, Ke Gu, Guangtao Zhai, Jing Liu, Xiaokang Yang, and Chang Wen Chen<br />
 <i>IEEE Transactions on Multimedia (TMM)</i>, vol. 20, no. 20, pp. 2049-2062, 2018.<br />
-[<a href="https://drive.google.com/open?id=1hox6cXcuE3vr1iIsvZkgOgtLLTLE1Nnb">Code: BPRI</a>]
+[<a href="https://terabox.com/s/1UThFO4Fny08WBzuykkNBKQ">Code: BPRI</a>]
 <br /><font color=red size=+0.00>Best Paper Runner-up Award</font>, <font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </li>
 </ul>
@@ -179,7 +179,7 @@ Xiongkuo Min, Ke Gu, Guangtao Zhai, Jing Liu, Xiaokang Yang, and Chang Wen Chen<
 <li><p><b>Blind Image Quality Estimation via Distortion Aggravation</b><br />
 Xiongkuo Min, Guangtao Zhai, Ke Gu, Yutao Liu, and Xiaokang Yang<br />
 <i>IEEE Transactions on Broadcasting (TBC)</i>, vol. 64, no. 2, pp. 508-517, 2018.<br />
-[<a href="https://drive.google.com/open?id=1C_NxTLvnBOJDGhqqtixCkra0LIMP6loF">Code: BMPRI</a>]
+[<a href="https://terabox.com/s/1DJqU6OG08s_PZYMCMB5qyA">Code: BMPRI</a>]
 <br /><font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </li>
 </ul>
@@ -188,7 +188,7 @@ Xiongkuo Min, Guangtao Zhai, Ke Gu, Yutao Liu, and Xiaokang Yang<br />
 Xiongkuo Min, Kede Ma, Ke Gu, Guangtao Zhai, Zhou Wang, and Weisi Lin<br />
 <i>IEEE Transactions on Image Processing (TIP)</i>, vol. 26, no. 11, pp. 5462-5474, 2017.<br />
 [<a href="https://sites.google.com/site/minxiongkuo/uca?authuser=0">Project</a>]
-[<a href="https://drive.google.com/open?id=0BzIV-pviJ97tQTJ1QzR6U3VJTFE">Code: UCA</a>]
+[<a href="https://terabox.com/s/13UTSaQ2ddauMRHbnD_aKjA">Code: UCA</a>]
 [<a href="https://terabox.com/s/17BeOiflG8vtU3OtT20briA">Database: CCT</a>]
 <br /><font color=red size=+0.00>ESI Hot Paper</font>, <font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 </li>
@@ -421,14 +421,14 @@ Y. Cao, X. Min, W. Sun, and G. Zhai, <i>IEEE TIP</i>, 2023.</p>
 <td align="left"><p><b><font color=black size=+1><b>Quality Assessment for Enhancement (Haze, Light, Stability, etc.)</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TMM]</b> Quality Evaluation of Image Dehazing Methods Using Synthetic Hazy Images<br />
-X. Min, G. Zhai, K. Gu, Y. Zhu, J.o Zhou, G. Guo, X. Yang, X. Guan, and W. Zhang, <i>IEEE TMM</i>, vol. 21, no. 9, pp. 2319-2333, 2019. [<a href="https://drive.google.com/open?id=1zArIS33JhhPq-ZHPBwcKytpMuG0Bnn6C">Code: DEHAZEfr</a>]
-[<a href="https://mega.nz/file/NMFACRgb#nkabpFrlAjUPqhBF1G1dPDFI4IGc6D11GA9IBY-1oRU">Database: SHRQ</a>]</p>
+X. Min, G. Zhai, K. Gu, Y. Zhu, J.o Zhou, G. Guo, X. Yang, X. Guan, and W. Zhang, <i>IEEE TMM</i>, vol. 21, no. 9, pp. 2319-2333, 2019. [<a href="https://terabox.com/s/1gwlnfoBHa8m9BGlUtFtnMg">Code: DEHAZEfr</a>]
+[<a href="https://terabox.com/s/18Cu2qUHGH7BuRnJvzj0ioA">Database: SHRQ</a>]</p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TITS]</b> Objective Quality Evaluation of Dehazed Images<br />
-X. Min, G. Zhai, K. Gu, X. Yang, and X. Guan, <i>IEEE TITS</i>, vol. 20, no. 9, pp. 2879-2892, 2019. [<a href="https://drive.google.com/open?id=1Kw1t1gXseQTlSeZr-tWzcIYKBIP1f97t">Code: DHQI</a>]
-[<a href="https://mega.nz/file/5JUzVZiQ#S26bMMoQA1MsLCmjnconetcSPXI9Dde3GStm4hh1xDk">Database: DHQ</a>]
-[<a href="https://mega.nz/file/lc8hmb7I#mqhR6pTX0EA6YY6ba9CPDPdHIRcxpdT6bhyYaaSUdtY">Database: rDHAZY</a>]
-[<a href="https://mega.nz/file/QdF1RTjI#zOwuk1GgWVHWH7hkZNieNyEkC_gl8qMCw4RSHtChet4">Database: rFRIDA</a>]</p>
+X. Min, G. Zhai, K. Gu, X. Yang, and X. Guan, <i>IEEE TITS</i>, vol. 20, no. 9, pp. 2879-2892, 2019. [<a href="https://terabox.com/s/1HZ3r0YUWdyH-R2HfR-SI8g">Code: DHQI</a>]
+[<a href="https://terabox.com/s/1uK-uwnqHgOdj67y7JAC2Gg">Database: DHQ</a>]
+[<a href="https://terabox.com/s/1G1Ll-7_xASjY3wx8tXAf4g">Database: rDHAZY</a>]
+[<a href="https://terabox.com/s/1QHLIAKNAxb9LPNBlqgGuUw">Database: rFRIDA</a>]</p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TITS]</b> HazDesNet: An End-to-End Network for Haze Density Prediction<br />
 J. Zhang, X. Min, Y. Zhu, G. Zhai, J. Zhou, X. Yang, and W. Zhang, <i>IEEE TITS</i>, vol. 23, no. 4, pp. 3087-3102, 2020. [<a href="https://github.com/JiaheZhang/HazDesNet">Code & Database</a>]</p>
@@ -453,12 +453,12 @@ X. Min, K. Gu, G. Zhai, X. Yang, W. Zhang, P. L. Callet, and C. W. Chen, <i>ACM 
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TIP]</b> Unified Blind Quality Assessment of Compressed Natural, Graphic, and Screen Content Images<br />
 X. Min, K. Ma, K. Gu, G. Zhai, Z. Wang, and W. Lin, <i>IEEE TIP</i>, vol. 26, no. 11, pp. 5462-5474, 2017. [<a href="https://sites.google.com/site/minxiongkuo/uca?authuser=0">Project</a>]
-[<a href="https://drive.google.com/open?id=0BzIV-pviJ97tQTJ1QzR6U3VJTFE">Code: UCA</a>]
-[<a href="https://mega.nz/file/xUtWAZLb#YIpqVOs3swZE6fxK5iupIQeA1hBwAVoZE40_hDttrV4">Database: CCT</a>]
+[<a href="https://terabox.com/s/13UTSaQ2ddauMRHbnD_aKjA">Code: UCA</a>]
+[<a href="https://terabox.com/s/17BeOiflG8vtU3OtT20briA">Database: CCT</a>]
 <br /><font color=red size=+0.00>ESI Hot Paper</font></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TBC]</b> Subjective and Objective Quality Assessment of Compressed Screen Content Videos<br />
-T. Li, X. Min, H. Zhao, G. Zhai, Y. Xu, and W. Zhang, <i>IEEE TBC</i>, vol. 67, no. 2, pp. 438-449, 2021. [<a href="https://mega.nz/folder/kE0A0LjZ#XJhN5IX7SYl-1_0n4oTa3Q">Database</a>]</p>
+T. Li, X. Min, H. Zhao, G. Zhai, Y. Xu, and W. Zhang, <i>IEEE TBC</i>, vol. 67, no. 2, pp. 438-449, 2021. [<a href="https://terabox.com/s/18IWcYNIQ-tBkVkI2N0nUaw">Database</a>]</p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TVCG]</b> Evaluating Quality of Screen Content Images Via Structural Variation Analysis<br />
 K. Gu, J. Qiao, X. Min, G. Yue, W. Lin, and D. Thalmann, <i>IEEE TVCG</i>, vol. 24, no. 10, pp. 2689-2701, 2018. [<a href="https://kegu.netlify.app/CODE/CODE_2018TVCG.rar">Code</a>]</p>
@@ -468,19 +468,19 @@ K. Gu, L. Li, H. Lu, X. Min, and W. Lin, <i>IEEE TIE</i>, vol. 64, no. 5, pp. 39
 <br /><font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[SP]</b> Saliency-Induced Reduced-Reference Quality Index for Natural Scene and Screen Content Images<br />
-X. Min, K. Gu, G. Zhai, M. Hu, and X. Yang, <i>SP</i>, vol. 145, pp. 127-136, 2018. [<a href="https://drive.google.com/open?id=1Kzrq3tBAQJF-lPDLaO7a2-noS86eDYuo">Code</a>]</p>
+X. Min, K. Gu, G. Zhai, M. Hu, and X. Yang, <i>SP</i>, vol. 145, pp. 127-136, 2018. [<a href="https://terabox.com/s/1vhRFMW6NscYMue_YKGjlng">Code</a>]</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="images/MMS.jpg" alt="photo" width="300px" height="250px" />&nbsp;</td>
 <td align="left"><p><b><font color=black size=+1><b>Multimodal (Audio, Visual, Text, etc.) Saliency Prediction</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TIP]</b> A Multimodal Saliency Model for Videos With High Audio-Visual Correspondence<br />
-X. Min, G. Zhai, J. Zhou, X.-P. Zhang, X. Yang, and X. Guan, <i>IEEE TIP</i>, vol. 29, pp. 3805-3819, 2020. [<a href="https://mega.nz/file/xVsDTKQQ#KoWypaLYk2D5Q7xuAt_du5j4v_osfLNjGdbPWfZ427c">Code</a>]
-[<a href="https://mega.nz/file/IAcRhSJZ#PKqkGbO96C1zxbEFj1WgJ5WOdnnQzxLionjV0SV-5Xw">AVA Database</a>]</p>
+X. Min, G. Zhai, J. Zhou, X.-P. Zhang, X. Yang, and X. Guan, <i>IEEE TIP</i>, vol. 29, pp. 3805-3819, 2020. [<a href="https://terabox.com/s/17TXUs1P5FzvqFqT5cEZ2qQ">Code</a>]
+[<a href="https://terabox.com/s/1iONvcUc8b9pO6LfKGDn_vQ">AVA Database</a>]</p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[ACM TOMM]</b> Fixation Prediction through Multimodal Analysis<br />
-X. Min, G. Zhai, K. Gu, and X. Yang, <i>ACM TOMM</i>, vol. 13, no. 1, pp. 6:1-6:23, 2017. [<a href="https://mega.nz/file/9NM2iBSA#57cIhULAjLOX5ygYJcmVOaVejoN5tl55Nb_v04rpc6Y">Code</a>]
-[<a href="https://mega.nz/file/IAcRhSJZ#PKqkGbO96C1zxbEFj1WgJ5WOdnnQzxLionjV0SV-5Xw">Database</a>]</p>
+X. Min, G. Zhai, K. Gu, and X. Yang, <i>ACM TOMM</i>, vol. 13, no. 1, pp. 6:1-6:23, 2017. [<a href="https://terabox.com/s/1Y-ExaZzpNl0mdwWio58D4g">Code</a>]
+[<a href="https://terabox.com/s/1iONvcUc8b9pO6LfKGDn_vQ">Database</a>]</p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TIP]</b> How is Gaze Influenced by Image Transformations? Dataset and Model<br />
 Z. Che, A. Borji, G. Zhai, X. Min, G. Guo, and P. L. Callet, <i>IEEE TIP</i>, vol. 29, pp. 2287-2300, 2020. [<a href="https://github.com/CZHQuality/Sal-CFS-GAN">Code</a>]
@@ -498,14 +498,14 @@ Y. Sun, X. Min, H. Duan, and G. Zhai, IEEE ISCAS/, 2023, pp.1-5.
 <td align="left"><p><b><font color=black size=+1><b>BIQA Based on Pseudo References</b></font></b></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TMM]</b> Blind Quality Assessment Based on Pseudo Reference Image<br />
-X. Min, K. Gu, G. Zhai, J. Liu, X. Yang, and C. W. Chen, <i>IEEE TMM</i>, vol. 20, no. 20, pp. 2049-2062, 2018. [<a href="https://drive.google.com/open?id=1hox6cXcuE3vr1iIsvZkgOgtLLTLE1Nnb">Code: BPRI</a>]
+X. Min, K. Gu, G. Zhai, J. Liu, X. Yang, and C. W. Chen, <i>IEEE TMM</i>, vol. 20, no. 20, pp. 2049-2062, 2018. [<a href="https://terabox.com/s/1UThFO4Fny08WBzuykkNBKQ">Code: BPRI</a>]
 <br /><font color=red size=+0.00>Best Paper Runner-up Award</font>, <font color=red size=+0.00>ESI Highly Cited Paper</font></p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE TBC]</b> Blind Image Quality Estimation via Distortion Aggravation<br />
-X. Min, G. Zhai, K. Gu, Y. Liu, and X. Yang, <i>IEEE TBC</i>, vol. 64, no. 2, pp. 508-517, 2018. [<a href="https://drive.google.com/open?id=1C_NxTLvnBOJDGhqqtixCkra0LIMP6loF">Code: BMPRI</a>]</p>
+X. Min, G. Zhai, K. Gu, Y. Liu, and X. Yang, <i>IEEE TBC</i>, vol. 64, no. 2, pp. 508-517, 2018. [<a href="https://terabox.com/s/1DJqU6OG08s_PZYMCMB5qyA">Code: BMPRI</a>]</p>
 <p><p style="margin-top: -0.5em"></p>
 - <b>[IEEE ICME]</b> Blind Quality Assessment of Compressed Images via Pseudo Structural Similarity<br />
-X. Min, G. Zhai, K. Gu, Y. Fang, X. Yang, X. Wu, J. Zhou, and X. Liu, <i>IEEE ICME</i>, 2016, pp. 1-6. [<a href="https://drive.google.com/open?id=0BzIV-pviJ97tUnVoVFlpS1VRWFk">Code</a>]
+X. Min, G. Zhai, K. Gu, Y. Fang, X. Yang, X. Wu, J. Zhou, and X. Liu, <i>IEEE ICME</i>, 2016, pp. 1-6. [<a href="https://terabox.com/s/1R4_Tye391ByvbTbWNY7Jkw">Code</a>]
 <br /><font color=red size=+0.00>Best Student Paper Award</font></p>
 </td></tr></table>
 <h2>Contact</h2>
@@ -515,7 +515,7 @@ Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a>
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-23 10:42:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-26 21:09:53 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
