--- a/publication.html
+++ b/publication.html
@@ -49,6 +49,12 @@ Chunyi Li, Zicheng Zhang, Haoning Wu, Wei Sun, Xiongkuo Min, Xiaohong Liu, Guang
 </li>
 </ul>
 <ul>
+<li><p><b>Explain Vision Focus: Blending Human Saliency Into Synthetic Face Images</b><br />
+Kaiwei Zhang, Dandan Zhu, Xiongkuo Min, Huiyu Duan, and Guangtao Zhai<br />
+<i>IEEE Transactions on Multimedia (TMM)</i>, 2024.</p>
+</li>
+</ul>
+<ul>
 <li><p><b>Unified Audio-visual Saliency Model for Omnidirectional Videos with Spatial Audio</b><br />
 Dandan Zhu, Kaiwei Zhang, Nana Zhang, Qiangqiang Zhou, Xiongkuo Min, Guangtao Zhai, and Xiaokang Yang<br />
 <i>IEEE Transactions on Multimedia (TMM)</i>, vol. 26, pp. 764-775, 2024.</p>
@@ -205,6 +211,13 @@ Yucheng Zhu, Xiongkuo Min, Dandan Zhu, Guangtao Zhai, Xiaokang Yang, Wenjun Zhan
 </li>
 </ul>
 <ul>
+<li><p><b>Subjective and Objective Quality Assessment for in-the-Wild Computer Graphics Images</b><br />
+Zicheng Zhang, Wei Sun, Yingjie Zhou, Jun Jia, Zhichao Zhang, Jing Liu, Xiongkuo Min, and Guangtao Zhai<br />
+<i>ACM Transactions on Multimedia Computing, Communications and Applications (TOMM)</i>, vol. 20, no. 4, pp. 96:1-96:22, 2023.<br />
+[<a href="https://github.com/zzc-1998/CGIQA6K">Database</a>]</p>
+</li>
+</ul>
+<ul>
 <li><p><b>Image Quality Score Distribution Prediction via Alpha Stable Model</b><br />
 Yixuan Gao, Xiongkuo Min, Wenhan Zhu, Xiao-Ping Zhang, and Guangtao Zhai<br />
 <i>IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</i>, vol. 33, no. 6, pp. 2656-2671, 2023.<br />
@@ -236,9 +249,22 @@ Jun Jia, Zhongpai Gao, Dandan Zhu, Xiongkuo Min, Menghan Hu, and Guangtao Zhai<b
 </li>
 </ul>
 <ul>
+<li><p><b>Evaluating Point Cloud from Moving Camera Videos: A No-Reference Metric</b><br />
+Zicheng Zhang, Wei Sun, Yucheng Zhu, Xiongkuo Min, Wei Wu, Ying Chen, and Guangtao Zhai<br />
+<i>IEEE Transactions on Multimedia (TMM)</i>, 2023.<br />
+[<a href="https://github.com/zzc-1998/VQA_PC">Code</a>]</p>
+</li>
+</ul>
+<ul>
 <li><p><b>A Deep Learning Based Multi-Dimensional Aesthetic Quality Assessment Method for Mobile Game Images</b><br />
 Tao Wang, Wei Sun, Wei Wu, Ying Chen, Xiongkuo Min, Wei Lu, Zicheng Zhang, and Guangtao Zhai<br />
 <i>IEEE Transactions on Games (ToG)</i>, vol. 15, no. 4, pp. 658-668, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p><b>Implicit Neural Representation Learning for Hyperspectral Image Super-Resolution</b><br />
+Kaiwei Zhang, Dandan Zhu, Xiongkuo Min, and Guangtao Zhai<br />
+<i>IEEE Transactions on Geoscience and Remote Sensing (TGRS)</i>, vol. 61, p. 5500212, 2023.</p>
 </li>
 </ul>
 <p><b><font color=black size=+1.75>2022</font></b></p>
@@ -247,12 +273,6 @@ Tao Wang, Wei Sun, Wei Wu, Ying Chen, Xiongkuo Min, Wei Lu, Zicheng Zhang, and G
 Xiongkuo Min, Ke Gu, Guangtao Zhai, Xiaokang Yang, Wenjun Zhang, Patrick Le Callet, and Chang Wen Chen<br />
 <i>ACM Computing Surveys (CSUR)</i>, vol. 54, no. 9, pp. 1-36, 2022.<br />
 <b><font color="Red">ESI Highly Cited Paper</font></b></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Implicit Neural Representation Learning for Hyperspectral Image Super-Resolution</b><br />
-Kaiwei Zhang, Dandan Zhu, Xiongkuo Min, and Guangtao Zhai<br />
-<i>IEEE Transactions on Geoscience and Remote Sensing (TGRS)</i>, vol. 61, pp. 5500212-5500212, 2022.</p>
 </li>
 </ul>
 <ul>
@@ -377,7 +397,7 @@ Xiongkuo Min, Guangtao Zhai, Jiantao Zhou, Xiao-Ping Zhang, Xiaokang Yang, and X
 <li><p><b>A Metric for Light Field Reconstruction, Compression, and Display Quality Evaluation</b><br />
 Xiongkuo Min, Jiantao Zhou, Guangtao Zhai, Patrick Le Callet, Xiaokang Yang, and Xinping Guan<br />
 <i>IEEE Transactions on Image Processing (TIP)</i>, vol. 29, pp. 3790-3804, 2020.<br />
-[<a href="https://mega.nz/file/BQdXWJxA#kEtN1IMesXoSC3bdTMzsC6E2cCP7Puu9j3a47nxQbUw">Code</a>]</p>
+[<a href="https://terabox.com/s/1hLBSOf0pqj0lkOGiFhnLWw">Code</a>]</p>
 </li>
 </ul>
 <ul>
@@ -439,7 +459,7 @@ Yuming Fang, Chi Zhang, Xiongkuo Min, Hanqin Huang, Yuegen Yi, Guangtao Zhai, an
 <li><p><b>Quality Evaluation of Image Dehazing Methods Using Synthetic Hazy Images</b><br />
 Xiongkuo Min, Guangtao Zhai, Ke Gu, Yucheng Zhu, Jiantao Zhou, Guodong Guo, Xiaokang Yang, Xinping Guan, and Wenjun Zhang<br />
 <i>IEEE Transactions on Multimedia (TMM)</i>, vol. 21, no. 9, pp. 2319-2333, 2019.<br />
-[<a href="https://drive.google.com/open?id=1zArIS33JhhPq-ZHPBwcKytpMuG0Bnn6C">Code: DEHAZEfr</a>]
+[<a href="https://terabox.com/s/1gwlnfoBHa8m9BGlUtFtnMg">Code: DEHAZEfr</a>]
 [<a href="https://terabox.com/s/18Cu2qUHGH7BuRnJvzj0ioA">Database: SHRQ</a>]</p>
 </li>
 </ul>
@@ -447,7 +467,7 @@ Xiongkuo Min, Guangtao Zhai, Ke Gu, Yucheng Zhu, Jiantao Zhou, Guodong Guo, Xiao
 <li><p><b>Objective Quality Evaluation of Dehazed Images</b><br />
 Xiongkuo Min, Guangtao Zhai, Ke Gu, Xiaokang Yang, and Xinping Guan<br />
 <i>IEEE Transactions on Intelligent Transportation Systems (TITS)</i>, vol. 20, no. 9, pp. 2879-2892, 2019.<br />
-[<a href="https://drive.google.com/open?id=1Kw1t1gXseQTlSeZr-tWzcIYKBIP1f97t">Code: DHQI</a>]
+[<a href="https://terabox.com/s/1HZ3r0YUWdyH-R2HfR-SI8g">Code: DHQI</a>]
 [<a href="https://terabox.com/s/1uK-uwnqHgOdj67y7JAC2Gg">Database: DHQ</a>]
 [<a href="https://terabox.com/s/1G1Ll-7_xASjY3wx8tXAf4g">Database: rDHAZY</a>]
 [<a href="https://terabox.com/s/1QHLIAKNAxb9LPNBlqgGuUw">Database: rFRIDA</a>]</p>
@@ -476,7 +496,7 @@ Huiyu Duan, Xiongkuo Min, Yi Fang, Lei Fan, Xiaokang Yang, and Guangtao Zhai<br 
 <li><p><b>Blind Quality Assessment Based on Pseudo Reference Image</b><br />
 Xiongkuo Min, Ke Gu, Guangtao Zhai, Jing Liu, Xiaokang Yang, and Chang Wen Chen<br />
 <i>IEEE Transactions on Multimedia (TMM)</i>, vol. 20, no. 20, pp. 2049-2062, 2018.<br />
-[<a href="https://drive.google.com/open?id=1hox6cXcuE3vr1iIsvZkgOgtLLTLE1Nnb">Code: BPRI</a>]<br />
+[<a href="https://terabox.com/s/1UThFO4Fny08WBzuykkNBKQ">Code: BPRI</a>]<br />
 <b><font color="Red">Best Paper Runner-up Award</font></b>, <b><font color="Red">ESI Highly Cited Paper</font></b></p>
 </li>
 </ul>
@@ -484,14 +504,14 @@ Xiongkuo Min, Ke Gu, Guangtao Zhai, Jing Liu, Xiaokang Yang, and Chang Wen Chen<
 <li><p><b>Blind Image Quality Estimation via Distortion Aggravation</b><br />
 Xiongkuo Min, Guangtao Zhai, Ke Gu, Yutao Liu, and Xiaokang Yang<br />
 <i>IEEE Transactions on Broadcasting (TBC)</i>, vol. 64, no. 2, pp. 508-517, 2018.<br />
-[<a href="https://drive.google.com/open?id=1C_NxTLvnBOJDGhqqtixCkra0LIMP6loF">Code: BMPRI</a>]</p>
+[<a href="https://terabox.com/s/1DJqU6OG08s_PZYMCMB5qyA">Code: BMPRI</a>]</p>
 </li>
 </ul>
 <ul>
 <li><p><b>Saliency-Induced Reduced-Reference Quality Index for Natural Scene and Screen Content Images</b><br />
 Xiongkuo Min, Ke Gu, Guangtao Zhai, Menghan Hu, and Xiaokang Yang<br />
 <i>Signal Processing (SP)</i>, vol. 145, pp. 127-136, 2018.<br />
-[<a href="https://drive.google.com/open?id=1Kzrq3tBAQJF-lPDLaO7a2-noS86eDYuo">Code</a>]</p>
+[<a href="https://terabox.com/s/1vhRFMW6NscYMue_YKGjlng">Code</a>]</p>
 </li>
 </ul>
 <ul>
@@ -520,7 +540,7 @@ Yucheng Zhu, Guangtao Zhai, and Xiongkuo Min<br />
 Xiongkuo Min, Kede Ma, Ke Gu, Guangtao Zhai, Zhou Wang, and Weisi Lin<br />
 <i>IEEE Transactions on Image Processing (TIP)</i>, vol. 26, no. 11, pp. 5462-5474, 2017.<br />
 [<a href="https://sites.google.com/site/minxiongkuo/uca?authuser=0">Project</a>]
-[<a href="https://drive.google.com/open?id=0BzIV-pviJ97tQTJ1QzR6U3VJTFE">Code: UCA</a>]
+[<a href="https://terabox.com/s/13UTSaQ2ddauMRHbnD_aKjA">Code: UCA</a>]
 [<a href="https://terabox.com/s/17BeOiflG8vtU3OtT20briA">Database: CCT</a>]<br />
 <b><font color="Red">ESI Hot Paper</font></b>, <b><font color="Red">ESI Highly Cited Pape</font></b></p>
 </li>
@@ -832,13 +852,13 @@ Huiyu Duan, Guangtao Zhai, Xiongkuo Min, Yucheng Zhu, Yi Fang, Xiaokang Yang<br 
 <li><p><b>Blind Quality Assessment of Compressed Images via Pseudo Structural Similarity</b><br />
 Xiongkuo Min, Guangtao Zhai, Ke Gu, Yuming Fang, Xiaokang Yang, Xiaolin Wu, Jiantao Zhou, and Xianming Liu<br />
 <i>IEEE International Conference on Multimedia and Expo (ICME)</i>, 2016, pp. 1-6.<br />
-[<a href="https://drive.google.com/open?id=0BzIV-pviJ97tUnVoVFlpS1VRWFk">Code</a>]<br />
+[<a href="https://terabox.com/s/1R4_Tye391ByvbTbWNY7Jkw">Code</a>]<br />
 <b><font color="Red">Best Student Paper Award</font></b></p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-23 10:43:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-26 21:00:48 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
