--- a/award.html
+++ b/award.html
@@ -25,6 +25,7 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Xiongkuo Min &ndash; Award &amp; Honor</h1>
+<div id="subtitle">2024, The Wu Wenjun Artificial Intelligence Youth Science and Technology Award</div>
 </div>
 <ul>
 <li><p>2024, Best Paper Nomination of ACM Multimedia</p>
@@ -84,7 +85,7 @@
 <p><tt>[<a href="award_cn.html">中文页面</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-23 10:42:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-22 20:01:51 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
