--- a/award_cn.html
+++ b/award_cn.html
@@ -27,6 +27,8 @@
 <h1>Xiongkuo Min &ndash; Award &amp; Honor</h1>
 </div>
 <ul>
+<li><p>2024，吴文俊人工智能青年科技奖</p>
+</li>
 <li><p>2024，ACM Multimedia最佳论文提名</p>
 </li>
 <li><p>2024，ECCV AIM超高清图像盲质量评价挑战赛冠军</p>
@@ -83,7 +85,7 @@
 <p><tt>[<a href="award.html">English Page</a>]</tt></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-23 10:42:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-22 20:01:56 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
