--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ minxiongkuo@sjtu.edu.cn<br />
 </div></div>
 <h2>News</h2>
 <ul>
+<li><p>02/2025, I receive the Wu Wenjun Artificial Intelligence Youth Science and Technology Award (吴文俊人工智能青年科技奖)</p>
+</li>
 <li><p>10/2024, Our paper accepted to ACM Multimedia 2024 is selected as Best Paper Nomination</p>
 </li>
 <li><p>09/2024, We receive the 1st Place Award of the ECCV AIM 2024 Challenge on UHD Blind Photo Quality Assessment</p>
@@ -515,7 +517,7 @@ Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a>
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-26 21:09:53 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-22 20:01:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
