--- a/biography.html
+++ b/biography.html
@@ -29,7 +29,7 @@
 <table class="imgtable"><tr><td>
 <img src="images/XiongkuoMin_full.jpg" alt="photo" width="250px" height="330px" />&nbsp;</td>
 <td align="left"><p>Xiongkuo Min received the B.E. degree from Wuhan University, Wuhan, China, in 2013, and the Ph.D. degree from Shanghai Jiao Tong University, Shanghai, China, in 2018, where he is currently a tenure-track Associate Professor with the Institute of Image Communication and Network Engineering. From Jun. 2018 to Sept. 2021, he was a Postdoc at Shanghai Jiao Tong University. From Jan. 2016 to Jan. 2017, he was a visiting student at University of Waterloo. From Jan. 2019 to Jan. 2021, he was a visiting scholar at The University of Texas at Austin and the University of Macau. He received the Best Paper Runner-up Award of IEEE Transactions on Multimedia in 2021, the Best Student Paper Award of IEEE International Conference on Multimedia and Expo (ICME) in 2016, the Best Paper Award of IEEE International Symposium on Broadband Multimedia Systems and Broadcasting (BMSB) in 2022, the Best Paper Award of the Visual Signal Processing and Communications Technical Committee (VSPC-TC) in 2024, the Best Paper Nomination of ACM Multimedia in 2024, and several first place awards of grand challenges held at CVPR, ECCV, ICME and ICIP. His research interests include image/video/audio quality, quality of experience, multimedia, image/video processing, computer vision.</p>
-<p>中文简介：闵雄阔，上海交通大学电子工程系长聘教轨副教授。2013年本科毕业于武汉大学，2018年博士毕业于上海交通大学，2018至2021年在上海交通大学做博士后，2021年至今于上海交通大学图像通信与网络工程研究所工作。研究方向为多媒体信号处理，主持国家自然科学基金面上/青年、重点研发计划子课题、CAAI-Mindspore学术基金、CCF-腾讯犀牛鸟基金、华为-上海交通大学ExploreX基金、博士后基金面上等项目；入选博士后创新人才、上海市浦江人才、上海市超博等计划；获中国电子学会技术发明一等奖、中国图象图形学会技术发明一等奖、中国电子学会优博等国内奖励，以及IEEE TMM最佳论文提名奖、IEEE ICME最佳学生论文奖、IEEE BMSB最佳论文奖、IEEE VSPC-TC最佳论文奖、ACM Multimedia最佳论文提名等国际奖励，多次获CVPR、ECCV、ICME、ICIP等挑战赛冠军；在IEEE/ACM汇刊及CCF A类期刊/会议上发表论文100余篇，其中9篇入选ESI热点/高被引论文，Google Scholar引用9300余次；获授权发明专利22项；任Sig. Process. Image Commun.、Displays、Hum.-centric Comput. Inf. Sci.、PLOS One、Scientific Report等期刊编委，及CAAI Artif. Intell. Res.期刊青年编委。</p>
+<p>中文简介：闵雄阔，上海交通大学电子工程系长聘教轨副教授。2013年本科毕业于武汉大学，2018年博士毕业于上海交通大学，2018至2021年在上海交通大学做博士后，2021年至今于上海交通大学图像通信与网络工程研究所工作。研究方向为多媒体信号处理，主持国家自然科学基金面上/青年、重点研发计划子课题、CAAI-Mindspore学术基金、CCF-腾讯犀牛鸟基金、华为-上海交通大学ExploreX基金、博士后基金面上等项目；入选博士后创新人才、上海市浦江人才、上海市超博等计划；获吴文俊人工智能青年科技奖、中国电子学会优博、中国图象图形学会技术发明一等奖、中国电子学会技术发明一等奖等国内奖励，以及IEEE TMM最佳论文提名奖、IEEE ICME最佳学生论文奖、IEEE BMSB最佳论文奖、IEEE VSPC-TC最佳论文奖、ACM Multimedia最佳论文提名等国际奖励，多次获CVPR、ECCV、ICME、ICIP等挑战赛冠军；在IEEE/ACM汇刊及CCF A类期刊/会议上发表论文100余篇，其中9篇入选ESI热点/高被引论文，Google Scholar引用9300余次；获授权发明专利22项；任Sig. Process. Image Commun.、Displays、Hum.-centric Comput. Inf. Sci.、PLOS One、Scientific Report等期刊编委，及CAAI Artif. Intell. Res.期刊青年编委。</p>
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
@@ -83,7 +83,7 @@ Wuhan University, Wuhan, China</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-22 20:08:55 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-22 21:20:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
