--- a/activity.html
+++ b/activity.html
@@ -67,6 +67,12 @@ Special Section “<a href="https://ieeeaccess.ieee.org/closed-special-sections/
 </ul>
 <h2>Grand Challenge Organizer</h2>
 <ul>
+<li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/21611">NTIRE 2025 XGC Quality Assessment - Track 1: User Generated Video (in conjunction with CVPR 2025)</a></p>
+</li>
+<li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/21485">NTIRE 2025 XGC Quality Assessment - Track 2: AI Generated Video (in conjunction with CVPR 2025)</a></p>
+</li>
+<li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/21555">NTIRE 2025 XGC Quality Assessment - Track 3: Talking Head (in conjunction with CVPR 2025)</a></p>
+</li>
 <li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/17627">NTIRE 2024 Quality Assessment for AI-Generated Content - Track 1 Image (in conjunction with CVPR 2024)</a></p>
 </li>
 <li><p><a href="https://codalab.lisn.upsaclay.fr/competitions/17621">NTIRE 2024 Quality Assessment for AI-Generated Content - Track 2 Video (in conjunction with CVPR 2024)</a></p>
@@ -179,7 +185,7 @@ Special Section “<a href="https://ieeeaccess.ieee.org/closed-special-sections/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-23 10:42:24 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-22 21:25:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
