--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@ minxiongkuo@sjtu.edu.cn<br />
 </li>
 <li><p>Visual attention analysis and prediction</p>
 </li>
-<li><p>Visual enhancement and restoration</p>
-</li>
-<li><p>Multimodal information fusion</p>
+<li><p>Visual enhancement and restoration
+</p>
 </li>
 <li><p>VR/AR/XR and metaverse</p>
 </li>
@@ -517,7 +516,7 @@ Web: <a href="https://minxiongkuo.github.io/">https://minxiongkuo.github.io/</a>
 Email: minxiongkuo@sjtu.edu.cn OR minxiongkuo@gmail.com<br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-23 13:46:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-23 14:29:59 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
