--- a/activity.html
+++ b/activity.html
@@ -28,6 +28,9 @@
 </div>
 <h2>Associate Editor / Editorial Board</h2>
 <ul>
+<li><p>ACM Transactions on Multimedia Computing, Communications, and Applications (IF: 5.2)<br />
+Associate Editor, 2025 - now</p>
+</li>
 <li><p>Elsevier Signal Processing: Image Communication (IF: 3.4)<br />
 Associate Editor, 2024 - now</p>
 </li>
@@ -185,7 +188,7 @@ Special Section “<a href="https://ieeeaccess.ieee.org/closed-special-sections/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-22 21:25:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-05 14:38:15 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
